# fdga-chain

./: .env.example  .gitignore  README.md  main.py  modal_app.py  pyproject.toml
.github/workflows/: pages.yml
api/: data_loader.py  main.py
data/states/GA/: config.json
data/states/GA/senate/: cycles.json
docs/: index.html
docs/data/: algorithms.json  chambers.json  congress_enacted.json  congress_hist_dem_seats.json  congress_hist_efficiency_gap.json  congress_hist_majority_minority_districts.json  congress_hist_mean_median.json  congress_hist_num_cut_edges.json  congress_hist_polsby_popper_mean.json  congress_hist_polsby_popper_min.json  congress_map_enacted.json  congress_map_stability.json  congress_summary.json  health.json  house_enacted.json  house_hist_dem_seats.json  house_hist_efficiency_gap.json  house_hist_majority_minority_districts.json  house_hist_mean_median.json  house_hist_num_cut_edges.json  house_hist_polsby_popper_mean.json  house_hist_polsby_popper_min.json  house_map_stability.json  house_summary.json  info.json  senate_enacted.json  senate_hist_dem_seats.json  senate_hist_efficiency_gap.json  senate_hist_majority_minority_districts.json  senate_hist_mean_median.json  senate_hist_num_cut_edges.json  senate_hist_polsby_popper_mean.json  senate_hist_polsby_popper_min.json  senate_map_stability.json  senate_summary.json
frontend/: index.html
scripts/: build_graph.py  compute_metrics.py  export_static.py  fetch_boundaries.py  fetch_elections.py  fetch_precinct_data.py  prep_data.py  run_ensemble.py  upload_to_modal.py
(+33 files in other folders)
